--- a/client/views/sentimentcard.css
+++ b/client/views/sentimentcard.css
@@ -17,6 +17,7 @@
   /*
   * Make the backside clickable
   */
+  -webkit-transform: translate3d(0,0,0);
   transform:translateZ(1px);
   -webkit-transform:translateZ(1px);
   -moz-transform:translateZ(1px);
@@ -58,8 +59,8 @@
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0 auto;
   /*background: #26ae60;*/
   width: 320px;
@@ -121,28 +122,29 @@ box-shadow: 0px;
 /* entire container, keeps perspective */
 .flip-container {
   -webkit-perspective: 1000;
-          perspective: 1000;
+  perspective: 1000;
 }
 /* flip the pane when hovered */
 /*.flip-container:hover .flipper, .flip-container.flip .flipper {*/
 .flip-container.flip .flipper {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 /* flip speed goes here */
 .flipper {
   -webkit-transition: 0.6s;
-          transition: 0.6s;
+  transition: 0.6s;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   position: relative;
 }
 
 /* hide back of pane during swap */
 .sentiment-card-front, .sentiment-card-back {
+  -webkit-transform: translate3d(0,0,0);
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   position: absolute;
   top:  0;
   left: 0;
@@ -159,6 +161,7 @@ box-shadow: 0px;
 
 /* front pane, placed above back */
 .sentiment-card-front {
+  -webkit-transform: translate3d(0,0,0);
   z-index: 2;
   /* for firefox 31 */
   transform: rotateY(0deg);
@@ -171,16 +174,16 @@ box-shadow: 0px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 
   /** Safari **/
   -webkit-display: -webkit-box;
@@ -201,16 +204,16 @@ box-shadow: 0px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 paper-ripple {
